<resources>
    <string name="app_name">inomTest</string>
    <string name="singupID">학번을 입력해주세요:)</string>
    <string name="singupPW">비밀번호를 입력해주세요:)</string>
    <string name="singupName">닉네임을 입력해주세요:)</string>
    <string name="singupName_ex">인천대 중고장터는 익명으로 운영됩니다!</string>
    <string name="singupFinish">환영합니다!</string>
    <string name="singupMain">인천대학교 중고장터</string>
    <string name="singupMain_ex">안전한 인천대 중고거래\n지금 학생임을 인증하고 시작해보세요!</string>
    <string name="singupToLogin1">이미 계정이 있나요?\t\t\t로그인하기</string>
    <string name="loginToSignup">회원가입</string>
    <string name="productIntroUserName">인천대생</string>
    <string name="productIntroBtn">채팅으로 거래하기</string>
    <string name="productIntroTitle">예시 제목 팔아요</string>
    <string name="productIntroCost">6000원</string>
    <string name="productIntroCategory">카테고리</string>
    <string name="productIntroContent">물품설명\n물품설명2\n물품설명3</string>
    <string name="searchRecentWord">최근 검색어</string>
    <string name="NotificationTop">알림</string>


    <string name="fcm_message">푸시알림으로 올 메시지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>