<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProductIntroFragment">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="뒤로가기"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/userTab"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/productImage"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/userTab"
            app:layout_constraintTop_toTopOf="@+id/userTab" />

        <TextView
            android:id="@+id/productIntroUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productIntroUserName"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/userScore"
        android:layout_width="90dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/userTab"
        app:layout_constraintEnd_toEndOf="@+id/userTab"
        app:layout_constraintTop_toTopOf="@+id/userTab"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:id="@+id/bottomTab"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/likebtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/bottomTab"
            app:layout_constraintTop_toTopOf="@+id/bottomTab"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/productIntroBtn"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/productIntroduction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomTab"
        app:layout_constraintTop_toBottomOf="@id/userTab">
        <TextView
            android:id="@+id/introTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productIntroTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/introCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productIntroCost"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/introCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productIntroCategory"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textSize="8sp" />
        <TextView
            android:id="@+id/introContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productIntroContent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textSize="10sp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>